// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings wallet reducer should handle WALLET_ALLOWANCE 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {
    "TK1": Immutable.Record {
      "id": null,
      "timestamp": null,
      "isFetching": false,
      "isFetched": false,
      "transactionHash": null,
      "isPending": false,
      "isFailed": false,
      "dao": null,
      "address": null,
      "decimals": null,
      "name": null,
      "symbol": "TK1",
      "balance": "0",
      "allowance": Immutable.Map {
        "0x670dc68af4125b8137d706bdec4abd8950d86c20": 4,
      },
      "url": null,
      "icon": null,
      "fee": null,
      "withFee": null,
      "platform": null,
      "totalSupply": "0",
      "managersList": null,
      "isReissuable": null,
      "isOptional": true,
      "feeAddress": null,
    },
  },
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_BALANCE 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {
    "TK1": Immutable.Record {
      "id": null,
      "timestamp": null,
      "isFetching": false,
      "isFetched": false,
      "transactionHash": null,
      "isPending": false,
      "isFailed": false,
      "dao": null,
      "address": null,
      "decimals": null,
      "name": null,
      "symbol": "TK1",
      "balance": "5",
      "allowance": Immutable.Map {},
      "url": null,
      "icon": null,
      "fee": null,
      "withFee": null,
      "platform": null,
      "totalSupply": "0",
      "managersList": null,
      "isReissuable": null,
      "isOptional": true,
      "feeAddress": null,
    },
  },
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_IS_TIME_REQUIRED 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {},
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": false,
}
`;

exports[`settings wallet reducer should handle WALLET_TIME_DEPOSIT with empty wallet 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {},
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": "0x3ca0cbc8c9e2d629b13cfe7106535f532fb59c85",
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_TIME_DEPOSIT with non empty wallet 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {},
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": 3,
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_TOKENS 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": true,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {
    "TK1": Immutable.Record {
      "id": null,
      "timestamp": null,
      "isFetching": false,
      "isFetched": false,
      "transactionHash": null,
      "isPending": false,
      "isFailed": false,
      "dao": null,
      "address": null,
      "decimals": null,
      "name": null,
      "symbol": "TK1",
      "balance": "0",
      "allowance": Immutable.Map {},
      "url": null,
      "icon": null,
      "fee": null,
      "withFee": null,
      "platform": null,
      "totalSupply": "0",
      "managersList": null,
      "isReissuable": null,
      "isOptional": true,
      "feeAddress": null,
    },
    "TK2": Immutable.Record {
      "id": null,
      "timestamp": null,
      "isFetching": false,
      "isFetched": false,
      "transactionHash": null,
      "isPending": false,
      "isFailed": false,
      "dao": null,
      "address": null,
      "decimals": null,
      "name": null,
      "symbol": "TK2",
      "balance": "0",
      "allowance": Immutable.Map {},
      "url": null,
      "icon": null,
      "fee": null,
      "withFee": null,
      "platform": null,
      "totalSupply": "0",
      "managersList": null,
      "isReissuable": null,
      "isOptional": true,
      "feeAddress": null,
    },
  },
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_TOKENS_FETCH 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": true,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {},
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTION 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {},
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      "hash1 - 1 - 2": Immutable.Record {
        "id": null,
        "timestamp": null,
        "txHash": "hash1",
        "blockHash": null,
        "blockNumber": 10,
        "transactionIndex": null,
        "from": 1,
        "to": 2,
        "by": null,
        "value": "0",
        "time": null,
        "gasPrice": null,
        "gas": null,
        "gasFee": "0",
        "input": null,
        "credited": null,
        "symbol": "",
        "type": "",
        "args": null,
      },
    },
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {},
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      "tx1": Immutable.Record {
        "id": null,
        "timestamp": null,
        "txHash": "hash1",
        "blockHash": null,
        "blockNumber": null,
        "transactionIndex": null,
        "from": 1,
        "to": 2,
        "by": null,
        "value": "0",
        "time": null,
        "gasPrice": null,
        "gas": null,
        "gasFee": "0",
        "input": null,
        "credited": null,
        "symbol": "",
        "type": "",
        "args": null,
      },
      "tx2": Immutable.Record {
        "id": null,
        "timestamp": null,
        "txHash": "hash2",
        "blockHash": null,
        "blockNumber": null,
        "transactionIndex": null,
        "from": 3,
        "to": 4,
        "by": null,
        "value": "0",
        "time": null,
        "gasPrice": null,
        "gas": null,
        "gasFee": "0",
        "input": null,
        "credited": null,
        "symbol": "",
        "type": "",
        "args": null,
      },
    },
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS_FETCH 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "address": null,
  "tokens": Immutable.Map {},
  "transactions": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": true,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      "a": 1,
    },
    "selected": null,
    "endOfList": false,
  },
  "btcAddress": null,
  "bccAddress": null,
  "nemAddress": null,
  "timeDeposit": "0",
  "timeAddress": null,
  "isMultisig": false,
  "isMainWallet": true,
  "isTIMERequired": true,
}
`;
